@@ -10,10 +10,10 @@ compile
 po/*.pot
 test-driver
 vips-*.tar.gz
-doc/reference/setup-build.stamp
-doc/reference/tmpl-build.stamp
-doc/reference/tmpl.stamp
-doc/reference/tmpl/
+doc/setup-build.stamp
+doc/tmpl-build.stamp
+doc/tmpl.stamp
+doc/tmpl/
 libvips-scan 
 libvips-scan.c
 Makefile.in
@@ -39,9 +39,9 @@ config.*
 configure
 depcomp
 autom4te.cache/
-doc/reference/gtk-doc.make
-doc/reference/libvips-docs.sgml
-doc/reference/libvips-docs.xml
+doc/gtk-doc.make
+doc/libvips-docs.sgml
+doc/libvips-docs.xml
 install-sh
 libtool
 libvips/include/vips/version.h
@@ -90,7 +90,6 @@ tools/shrink_width
 # we can't ignore all Makefile since we have a couple of hand-made ones
 Makefile
 doc/Makefile
-doc/reference/Makefile
 libvips/Makefile
 libvips/acquire/Makefile
 libvips/arithmetic/Makefile
@@ -128,27 +127,25 @@ tools/other/Makefile
 tools/scripts/Makefile
 
 # various things made by gtk-doc
-doc/reference/html-build.stamp
-doc/reference/html.stamp
-doc/reference/html/
-doc/reference/libvips-decl-list.txt
-doc/reference/libvips-decl.txt
-doc/reference/libvips-overrides.txt
-doc/reference/libvips-sections.txt
-doc/reference/libvips-undeclared.txt
-doc/reference/libvips-undocumented.txt
-doc/reference/libvips-unused.txt
-doc/reference/libvips.args
-doc/reference/libvips.hierarchy
-doc/reference/libvips.interfaces
-doc/reference/libvips.prerequisites
-doc/reference/libvips.signals
-doc/reference/libvips.types
-doc/reference/scan-build.stamp
-doc/reference/sgml-build.stamp
-doc/reference/sgml.stamp
-doc/reference/xml/
-doc/html
-doc/pdf
+doc/html-build.stamp
+doc/html.stamp
+doc/html/
+doc/libvips-decl-list.txt
+doc/libvips-decl.txt
+doc/libvips-overrides.txt
+doc/libvips-sections.txt
+doc/libvips-undeclared.txt
+doc/libvips-undocumented.txt
+doc/libvips-unused.txt
+doc/libvips.args
+doc/libvips.hierarchy
+doc/libvips.interfaces
+doc/libvips.prerequisites
+doc/libvips.signals
+doc/libvips.types
+doc/scan-build.stamp
+doc/sgml-build.stamp
+doc/sgml.stamp
+doc/xml/
 gtkdocerrors
 
